<resources>
    <string name="app_name">ShopVision</string>
    <string name="press_button_below_to_ask_for_help">press button below to ask for help</string>
    <string name="click_to_play_sound">click to play sound</string>
    <string name="name">name</string>
    <string name="ask">ask for help</string>
    <string name="logo">logo</string>
    <string name="title_activity_shopping_list">ShoppingList</string>
    <string name="button">shopping list</string>
    <string name="action_add">action_add</string>

    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>
    <string name="result_ready">Image uploaded successfully!</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>

    <string name="language_select">Select Language</string>
    <string name="translate">Image Translate</string>
</resources>
